@@ -76,6 +76,7 @@ SYNONYM_FILE="${RUNTIME_DIR}/OMIM.synonym"
 TRANSTERM_FILE="${RUNTIME_DIR}/OMIM.translation"
 TRANSWORD_FILE="${RUNTIME_DIR}/OMIM.special"
 EXCLUDE_FILE="${RUNTIME_DIR}/OMIM.exclude"
+ANIMALMODEL_FILE="${RUNTIME_DIR}/OMIM.animalmodel"
 QC1_FILE="OMIMqc1"
 QC2_FILE="OMIMqc2"
 DAG_ROOT_ID=""
@@ -97,6 +98,7 @@ export SYNONYM_FILE
 export TRANSTERM_FILE
 export TRANSWORD_FILE
 export EXCLUDE_FILE
+export ANIMALMODEL_FILE
 export QC1_FILE
 export QC2_FILE
 export DAG_ROOT_ID
