@@ -1,3 +1,14 @@
+TAG: vocload-6-0-2-2
+DATE: 01/20/2014
+STAFF: lec 
+CHANGES:
+1) TR11947/loadOBO-DC.py
+2) TR11956/OMIMtermcheck.py
+3) TR12021/OMIM/animalmodel report
+4) loadNote.py/loadTerms.py:
+change calls to MGI_NoteChunk to only create one row per note
+as we no longer need to create chunks of 255 
+
 TAG: vocload-tr12223-BP
 DATE: 1/7/2016
 STAFF: kstone
